--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@
 
                 <h3 class="title-2 card-title">Hygienic Food</h3>
 
-                <p class="label-1 card-text">Lorem Ipsum is simply dummy printing and typesetting.</p>
+                <p class="label-1 card-text">Maintaining high standards of food hygiene in our restaurant is crucial for protecting our esteemed customers' health and ensuring a positive dining experience. By following these best practices, we create a safe and hygienic environment for both staff and customers.</p>
 
               </div>
             </li>
@@ -938,7 +938,7 @@
 
                 <h3 class="title-2 card-title">Fresh Environment</h3>
 
-                <p class="label-1 card-text">Lorem Ipsum is simply dummy printing and typesetting.</p>
+                <p class="label-1 card-text">Maintaining a fresh environment in this restaurant is essential for providing a safe and enjoyable dining experience for customers. By following these best practices, we have created a welcoming and hygienic atmosphere that encourages repeat business and positive reviews.</p>
 
               </div>
             </li>
@@ -952,7 +952,7 @@
 
                 <h3 class="title-2 card-title">Skilled Chefs</h3>
 
-                <p class="label-1 card-text">Lorem Ipsum is simply dummy printing and typesetting.</p>
+                <p class="label-1 card-text">Our chefs are indispensable to the success of this restaurant. Their culinary expertise, creativity, and commitment to quality significantly impact the dining experience and overall reputation of the establishment. By investing in the continuous development of skilled chefs and adhering to best practices, we have ensured exceptional culinary standards and sustained success.</p>
 
               </div>
             </li>
@@ -966,7 +966,7 @@
 
                 <h3 class="title-2 card-title">Event & Party</h3>
 
-                <p class="label-1 card-text">Lorem Ipsum is simply dummy printing and typesetting.</p>
+                <p class="label-1 card-text">Organizing successful events and parties at our restaurant involves meticulous planning, attention to detail, and exceptional service. By following these best practices, we create memorable experiences for our clients and build a strong reputation for hosting outstanding events.</p>
 
               </div>
             </li>
